# game

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  CharacterPage.cpp  CharacterPage.hpp  CreatePlayerPage.cpp  CreatePlayerPage.hpp  EducationPage.cpp  EducationPage.hpp  EntertainmentPage.cpp  EntertainmentPage.hpp  JobsPage.cpp  JobsPage.hpp  MainMenuPage.cpp  MainMenuPage.hpp  MainWindow.cpp  MainWindow.hpp  PlayerPage.cpp  PlayerPage.hpp  PlayerSkillsPage.cpp  PlayerSkillsPage.hpp  main.cpp
src/client/src/: CMakeLists.txt  EducationPage.hpp  EntertainmentPage.cpp  JobsPage.cpp  MainMenuPage.cpp  MainWindow.cpp  MainWindow.hpp  PlayerPage.cpp  PlayerSkillsPage.hpp
src/server/: CMakeLists.txt  Logger.cpp  Player.cpp  Player.hpp  PlayerManager.cpp  PlayerManager.hpp  Server.cpp  Server.hpp  Session.cpp  WorldManager.cpp  WorldManager.hpp  main.cpp
src/server/Activities/: CMakeLists.txt  EducationActivity.cpp  EducationActivity.hpp  EntertainmentActivity.cpp  EntertainmentActivity.hpp  JobActivity.cpp  JobActivity.hpp
src/server/Entities/: CMakeLists.txt  Logger.hpp  Player.cpp  Player.hpp  PlayerManager.cpp  PlayerManager.hpp  Server.cpp  Server.hpp  WorldManager.cpp
src/server/Entities/Activities/: CMakeLists.txt  EducationActivity.hpp  IActivity.hpp  JobActivity.cpp
src/server/src/: CMakeLists.txt  PlayerManager.cpp  PlayerManager.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  WorldManager.cpp  WorldManager.hpp
src/test/client/: CMakeLists.txt  CreatePlayerPage.hpp  EducationPage.hpp  EntertainmentPage.hpp  JobsPage.hpp  MainMenuPage.hpp  PlayerPage.hpp  PlayerSkillsPage.hpp  main.cpp
src/test/server/: CMakeLists.txt  Player.cpp  PlayerManager.cpp  WorldManager.cpp
